emoji picker scrollbar fix

--- a/maroon.theme.css
+++ b/maroon.theme.css
@@ -1,4 +1,4 @@
-//META{"name":"maroon","description":"Based on Slack's aubergine/maroon style, enable Dark Mode in Settings > Appearence for this theme!","author":"phit","version":"1.0.1"}*//{}
+//META{"name":"maroon","description":"Based on Slack's aubergine/maroon style, enable Dark Mode in Settings > Appearence for this theme!","author":"phit","version":"1.0.2"}*//{}
 
 /* Chat Text Bar */
 .theme-dark .chat>.content {
@@ -377,6 +377,14 @@
 .emoji-picker .scroller::-webkit-scrollbar-thumb {
     background-color: #61485e !important;
     border-color: transparent;
+}
+
+.scrollerThemed-19vinI.themeLight-1WK0Av.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track, .theme-dark .scrollerThemed-19vinI.themeLight-1WK0Av.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track, .theme-light .scrollerWrap-2uBjct.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track {
+    background-color: #3e313c;
+}
+
+.scroller-wrap .scroller::-webkit-scrollbar-thumb, .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+    border: 3px solid #4d394b;
 }
 
 .emoji-picker .scroller::-webkit-scrollbar-track-piece {
