--- a/userstyles.css
+++ b/userstyles.css
@@ -378,6 +378,14 @@
     border-color: transparent;
 }
 
+.scrollerThemed-19vinI.themeLight-1WK0Av.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track, .theme-dark .scrollerThemed-19vinI.themeLight-1WK0Av.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track, .theme-light .scrollerWrap-2uBjct.scrollerTrack-3hhmU0>.scroller-fzNley::-webkit-scrollbar-track {
+    background-color: #3e313c;
+}
+
+.scroller-wrap .scroller::-webkit-scrollbar-thumb, .scroller-wrap .scroller::-webkit-scrollbar-track-piece {
+    border: 3px solid #4d394b;
+}
+
 .emoji-picker .scroller::-webkit-scrollbar-track-piece {
 	background-color: #4d394b;
 }
